# etl-ai-assistent

./: .env  .gitignore  README.md  chunks.json  out.txt  output1.json  pyproject.toml  ragas_dataset.json  readme.md  Руководство_по_установке_и_настройке_SafeMobile_15.0.docx
out_assets/: Таблица_1___Перечень_терминов_и_сокращений.csv  Таблица_2.1___Системные_требования_для_основных_компонентов.csv  Таблица_2.2___Системные_требования_для_опциональных_компонентов.csv  Таблица_2.3___Системные_требования_для_10к__устройств_iOS__Android__Аврора.csv  Таблица_2.4_-_Системные_требования_для_работы_компонента__Сервер_БД__db___для_10к__устройств.csv  Таблица_2.5_-_Системные_требования_для_опциональных_компонентов.csv
out_ragas/: 2025-11-27 11:27:25.score.json
scripts/: app.py  chunk_splitter.py  docx_etl.py  embed_chunks.py  main.py  make_ragas_dataset.py  make_ragas_test.py  qdrant_adapter.py  test.out.py  vectorize_out.py
scripts/parsers/: docx_parser.py
scripts/services/: chunk_splitter_service.py  embedder_service.py  qdrant_service.py
