[project]
name = "aiassistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Щиголь Алексей",email = "hosglial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-docx (>=1.2.0,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "qdrant-client (>=1.16.1,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.122.0,<0.123.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
